# lob-backtester

./: .gitignore  BACKTEST_INDEX.md  CODEBASE.md  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: e1_atm_comparison.yaml  e1_deep_itm.yaml  nvda_readability_first_arcx.yaml  nvda_readability_first_xnas.yaml
scripts/: backtest_deeplob.py  e5_regime_filter_test.py  param_sweep.py  run_readability_backtest.py  run_regression_backtest.py  run_spread_signal_backtest.py
src/lobbacktest/: __init__.py  config.py  context.py  experiment.py  labels.py  registry.py  types.py  version.py
src/lobbacktest/data/: __init__.py  loader.py  prices.py  signal_manifest.py
src/lobbacktest/engine/: __init__.py  vectorized.py  zero_dte.py
src/lobbacktest/metrics/: __init__.py  base.py  prediction.py  regression_prediction.py  returns.py  risk.py  trading.py
src/lobbacktest/reports/: __init__.py  plots.py  summary.py
src/lobbacktest/stats/: __init__.py  stats.py
src/lobbacktest/strategies/: __init__.py  base.py  holding.py  (+5 more)
tests/: __init__.py  test_config.py  test_context.py  test_experiment.py  test_integration_real_data.py  test_labels.py  test_phase2_calibration_precedence.py  test_phase2_expected_fields_wiring.py  test_registry.py  test_signal_manifest.py  test_signal_manifest_feature_set_ref.py  test_types.py
tests/test_engine/: __init__.py  test_vectorized.py  test_zero_dte.py
tests/test_metrics/: __init__.py  test_prediction.py  test_returns.py  test_risk.py  test_trading.py
tests/test_strategies/: __init__.py  test_direction.py  test_holding.py  test_readability.py  test_regression.py  test_twap.py
